--- a/scripts/analysis.ipynb
+++ b/scripts/analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
+    "# Analysis\n",
     "\n",
     "Query the database based on vaccination provided and analysis with graph"
    ]
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4723,7 +4723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4746,65 +4746,65 @@
          },
          "hovertemplate": "Vaccine=%{label}<br>Count=%{value}<extra></extra>",
          "labels": [
-          "Oxford/AstraZeneca",
-          "Sputnik V",
-          "Sinovac",
-          "COVIran Barekat",
-          "Pfizer/BioNTech",
-          "Covaxin",
-          "Sinopharm/Beijing",
-          "Valneva",
-          "Johnson&Johnson",
-          "Soberana02",
           "Moderna",
+          "Sputnik V",
+          "Sinopharm/Beijing",
           "CanSino",
+          "Pfizer/BioNTech",
           "Novavax",
+          "Oxford/AstraZeneca",
+          "Sinovac",
+          "Abdala",
+          "Johnson&Johnson",
           "Sputnik Light",
-          "Sanofi/GSK",
-          "QazVac",
+          "Medigen",
+          "Soberana Plus",
+          "Covaxin",
           "ZF2001",
           "Sinopharm/Wuhan",
-          "KoviVac/Chumakov",
-          "Abdala",
-          "EpiVacCorona",
-          "IMBCAMS",
-          "Soberana Plus",
-          "Corbevax",
-          "Medicago",
-          "Medigen",
+          "QazVac",
+          "Valneva",
           "KCONVAC",
-          "Turkovac"
+          "EpiVacCorona",
+          "Medicago",
+          "Turkovac",
+          "COVIran Barekat",
+          "Sanofi/GSK",
+          "Soberana02",
+          "KoviVac/Chumakov",
+          "IMBCAMS",
+          "Corbevax"
          ],
          "legendgroup": "",
          "name": "",
          "showlegend": true,
          "type": "pie",
          "values": [
+          115,
+          67,
+          96,
+          27,
+          166,
+          33,
           187,
           67,
-          67,
-          1,
-          166,
-          31,
-          96,
-          2,
+          4,
           106,
-          4,
-          115,
-          27,
-          33,
           29,
-          4,
-          2,
+          1,
+          1,
+          31,
           3,
           3,
+          2,
+          2,
           1,
-          4,
           2,
           1,
           1,
           1,
-          1,
+          4,
+          4,
           1,
           1,
           1
@@ -5668,7 +5668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -13032,7 +13032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
