folder structure creation

--- a/notebook/dataPipeline.ipynb
+++ b/notebook/dataPipeline.ipynb
@@ -34,16 +34,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Check if dataset exist or download\n",
+    "\n",
+    "Look for 'covid-19-data' dir in the root folder. If not fetch the data from the respective repository."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching the data from github public/data/vaccinations/vaccinations.csv\n",
+      "Successfully fetched the file public/data/vaccinations/vaccinations.csv\n",
+      "Fetching the data from github public/data/vaccinations/vaccinations-by-manufacturer.csv\n",
+      "Successfully fetched the file public/data/vaccinations/vaccinations-by-manufacturer.csv\n",
+      "Fetching the data from github public/data/vaccinations/vaccinations-by-age-group.csv\n",
+      "Successfully fetched the file public/data/vaccinations/vaccinations-by-age-group.csv\n",
+      "Fetching the data from github public/data/vaccinations/us_state_vaccinations.csv\n",
+      "Successfully fetched the file public/data/vaccinations/us_state_vaccinations.csv\n",
+      "Fetching the data from github public/data/vaccinations/locations.csv\n",
+      "Successfully fetched the file public/data/vaccinations/locations.csv\n",
+      "Fetching the data from github scripts/input/un/population_latest.csv\n",
+      "Successfully fetched the file scripts/input/un/population_latest.csv\n",
+      "Fetching the data from github scripts/input/iso/iso.csv\n",
+      "Successfully fetched the file scripts/input/iso/iso.csv\n",
+      "Fetching the data from github public/data/vaccinations/country_data/Canada.csv\n",
+      "Successfully fetched the file public/data/vaccinations/country_data/Canada.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts.makeDataset import makeDataset\n",
+    "\n",
+    "(raw_vaccination, raw_manufacture, raw_vaccine_age, raw_us_state, raw_location, raw_population, raw_iso, raw_canada) = makeDataset()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's start with the data cleaning and manupulate as per the requirement."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory ../model already exists.\n"
+     ]
+    }
+   ],
    "source": [
-    "from csvRW import read_csv, create_csv, read_csv_without_header, append_row_to_csv"
+    "import os\n",
+    "from scripts.csvRW import read_csv, create_csv, read_csv_without_header, append_row_to_csv\n",
+    "\n",
+    "directory = '../model'\n",
+    "if not os.path.exists(directory):\n",
+    "    os.makedirs(directory)\n",
+    "    print(f\"Directory {directory} created.\")\n",
+    "else:\n",
+    "    print(f\"Directory {directory} already exists.\")"
    ]
   },
   {
@@ -58,21 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/locations.csv\n",
       "File is successfully created at ../model/Source.csv\n"
      ]
     }
    ],
    "source": [
-    "raw_data = read_csv(\"../covid-19-data/locations.csv\")\n",
-    "result = list(set([(data['source_name'],data['source_website']) for data in raw_data]))\n",
+    "result = list(set([(data['source_name'],data['source_website']) for data in raw_location]))\n",
     "result.append(['',''])\n",
     "create_csv(\"../model/Source.csv\",result)"
    ]
@@ -96,29 +163,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/iso.csv\n",
-      "File is successfully read ../covid-19-data/locations.csv\n",
       "File is successfully created at ../model/Country.csv\n"
      ]
     }
    ],
    "source": [
-    "raw_data = read_csv(\"../covid-19-data/iso.csv\")\n",
+    "\n",
     "resultLocation ={}\n",
-    "for data in raw_data:\n",
+    "for data in raw_iso:\n",
     "    resultLocation[data['iso_code']] = data[\"location\"]\n",
-    "raw_data = read_csv(\"../covid-19-data/locations.csv\")\n",
+    "\n",
     "source = read_csv_without_header(\"../model/Source.csv\")\n",
     "\n",
     "result = []\n",
-    "for data in raw_data:\n",
+    "for data in raw_location:\n",
     "    if [data['source_name'],data['source_website']] in source:\n",
     "        result.append([data['iso_code'],data['location'],source.index([data['source_name'],data['source_website']])+1, data['last_observation_date']])\n",
     "        del resultLocation[data['iso_code']]\n",
@@ -143,22 +208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/vaccinations-by-age-group.csv\n",
       "File is successfully created at ../model/Age_group.csv\n"
      ]
     }
    ],
    "source": [
-    "raw_data = read_csv(\"../covid-19-data/vaccinations-by-age-group.csv\")\n",
-    "\n",
-    "result = set([data['age_group']for data in raw_data])\n",
+    "result = set([data['age_group']for data in raw_vaccine_age])\n",
     "result = [[data]for data in result]\n",
     "create_csv(\"../model/Age_group.csv\",result)"
    ]
@@ -175,36 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/locations.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File is successfully read ../covid-19-data/vaccinations-by-manufacturer.csv\n",
       "File is successfully created at ../model/Vaccine.csv\n"
      ]
     }
    ],
    "source": [
-    "raw_data_loc = read_csv(\"../covid-19-data/locations.csv\")\n",
-    "raw_data_manu = read_csv(\"../covid-19-data/vaccinations-by-manufacturer.csv\")\n",
-    "\n",
     "result = []\n",
-    "for data in raw_data_loc:\n",
+    "for data in raw_location:\n",
     "    result.append(data['vaccines'].split(\",\"))\n",
     "\n",
     "result = [x.strip() for xs in result for x in xs]\n",
     "\n",
-    "for data in raw_data_manu:\n",
+    "for data in raw_manufacture:\n",
     "    result.append(data['vaccine'].strip())\n",
     "\n",
     "result = [[val]for val in list(set(result))]\n",
@@ -224,14 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/population_latest.csv\n",
       "File is successfully created at ../model/Population_Country.csv\n"
      ]
     }
@@ -240,9 +290,7 @@
     "raw_data_loc = read_csv_without_header(\"../model/Country.csv\")\n",
     "raw_data_loc = [data[0] for data in raw_data_loc]\n",
     "\n",
-    "raw_data = read_csv(\"../covid-19-data/population_latest.csv\")\n",
-    "\n",
-    "result = [[data['iso_code'],data['year'],data['population']] for data in raw_data if data['iso_code'] in raw_data_loc]\n",
+    "result = [[data['iso_code'],data['year'],data['population']] for data in raw_population if data['iso_code'] in raw_data_loc]\n",
     "\n",
     "create_csv(\"../model/Population_Country.csv\",result)"
    ]
@@ -259,14 +307,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/locations.csv\n",
       "File is successfully created at ../model/Country_Vaccine.csv\n"
      ]
     }
@@ -278,10 +325,8 @@
     "raw_data_vac = read_csv_without_header(\"../model/Vaccine.csv\")\n",
     "raw_data_vac = [data[0] for data in raw_data_vac]\n",
     "\n",
-    "raw_data_loc = read_csv(\"../covid-19-data/locations.csv\")\n",
-    "\n",
     "result = []\n",
-    "for data in raw_data_loc:\n",
+    "for data in raw_location:\n",
     "    vaccineList = [val.strip() for val in data['vaccines'].split(\",\")]\n",
     "\n",
     "    if data['iso_code'] in raw_data_iso:\n",
@@ -307,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +372,7 @@
     "    \n",
     "result = []\n",
     "\n",
-    "for data in raw_data_manu:\n",
+    "for data in raw_manufacture:\n",
     "    if data['location'] in iso_map.keys():\n",
     "        if data['vaccine'] in raw_data_vac:\n",
     "           result.append([iso_map[data['location']],data['date'],data['vaccine'], data['total_vaccinations']])\n",
@@ -351,24 +396,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/vaccinations.csv\n",
       "File is successfully created at ../model/Vaccination.csv\n"
      ]
     }
    ],
    "source": [
     "iso_list = iso_map.values()\n",
-    "raw_data_vac = read_csv(\"../covid-19-data/vaccinations.csv\")\n",
     "\n",
     "result = []\n",
-    "for data in raw_data_vac:\n",
+    "for data in raw_vaccination:\n",
     "    if data['iso_code'] in iso_list:\n",
     "        pass\n",
     "    else:\n",
@@ -393,14 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/us_state_vaccinations.csv\n",
       "2023-05-10 is not in vaccination table for USA\n",
       "2023-05-10 is not in vaccination table for USA\n",
       "2023-05-10 is not in vaccination table for USA\n",
@@ -475,13 +517,11 @@
     "iso_code ='USA'\n",
     "fk = [data[1] for data in model_vac if data[0] == iso_code]\n",
     "\n",
-    "raw_data_states = read_csv(\"../covid-19-data/us_state_vaccinations.csv\")\n",
-    "\n",
     "result = []\n",
-    "for data in raw_data_states:\n",
+    "for data in raw_us_state:\n",
     "    if data['date'] in fk:\n",
     "        population = 0\n",
-    "        if data['total_vaccinations_per_hundred'].replace('.','',1).isdigit() and float(data['total_vaccinations_per_hundred']) != 0:\n",
+    "        if str(data['total_vaccinations_per_hundred']).replace('.','',1).isdigit() and float(data['total_vaccinations_per_hundred']) > 0:\n",
     "            population = (float(data['total_vaccinations'])/float(data['total_vaccinations_per_hundred']))*100\n",
     "            \n",
     "        result.append([iso_code,data['date'],data['location'],data['total_vaccinations'],data['total_distributed'],data['people_vaccinated'],data['people_fully_vaccinated'],data['daily_vaccinations_raw'],data['daily_vaccinations'],data['share_doses_used'],data['total_boosters'],population])\n",
@@ -501,14 +541,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File is successfully read ../covid-19-data/vaccinations-by-age-group.csv\n",
       "Not in parent vaccination table Argentina 2020-01-01\n",
       "Not in parent vaccination table Argentina 2020-01-01\n",
       "Not in parent vaccination table Argentina 2020-01-01\n",
@@ -4813,6 +4852,87 @@
       "Not in parent vaccination table Finland 2021-01-01\n",
       "Not in parent vaccination table Finland 2021-01-01\n",
       "Not in parent vaccination table Finland 2021-01-01\n",
+      "Not in parent vaccination table Hong Kong 2024-05-11\n",
+      "Not in parent vaccination table Hong Kong 2024-05-11\n",
+      "Not in parent vaccination table Hong Kong 2024-05-11\n",
+      "Not in parent vaccination table Hong Kong 2024-05-11\n",
+      "Not in parent vaccination table Hong Kong 2024-05-11\n",
+      "Not in parent vaccination table Hong Kong 2024-05-11\n",
+      "Not in parent vaccination table Hong Kong 2024-05-12\n",
+      "Not in parent vaccination table Hong Kong 2024-05-12\n",
+      "Not in parent vaccination table Hong Kong 2024-05-12\n",
+      "Not in parent vaccination table Hong Kong 2024-05-13\n",
+      "Not in parent vaccination table Hong Kong 2024-05-13\n",
+      "Not in parent vaccination table Hong Kong 2024-05-13\n",
+      "Not in parent vaccination table Hong Kong 2024-05-13\n",
+      "Not in parent vaccination table Hong Kong 2024-05-13\n",
+      "Not in parent vaccination table Hong Kong 2024-05-13\n",
+      "Not in parent vaccination table Hong Kong 2024-05-13\n",
+      "Not in parent vaccination table Hong Kong 2024-05-13\n",
+      "Not in parent vaccination table Hong Kong 2024-05-14\n",
+      "Not in parent vaccination table Hong Kong 2024-05-14\n",
+      "Not in parent vaccination table Hong Kong 2024-05-14\n",
+      "Not in parent vaccination table Hong Kong 2024-05-14\n",
+      "Not in parent vaccination table Hong Kong 2024-05-14\n",
+      "Not in parent vaccination table Hong Kong 2024-05-14\n",
+      "Not in parent vaccination table Hong Kong 2024-05-14\n",
+      "Not in parent vaccination table Hong Kong 2024-05-15\n",
+      "Not in parent vaccination table Hong Kong 2024-05-15\n",
+      "Not in parent vaccination table Hong Kong 2024-05-15\n",
+      "Not in parent vaccination table Hong Kong 2024-05-15\n",
+      "Not in parent vaccination table Hong Kong 2024-05-16\n",
+      "Not in parent vaccination table Hong Kong 2024-05-16\n",
+      "Not in parent vaccination table Hong Kong 2024-05-16\n",
+      "Not in parent vaccination table Hong Kong 2024-05-16\n",
+      "Not in parent vaccination table Hong Kong 2024-05-16\n",
+      "Not in parent vaccination table Hong Kong 2024-05-16\n",
+      "Not in parent vaccination table Hong Kong 2024-05-16\n",
+      "Not in parent vaccination table Hong Kong 2024-05-16\n",
+      "Not in parent vaccination table Hong Kong 2024-05-17\n",
+      "Not in parent vaccination table Hong Kong 2024-05-17\n",
+      "Not in parent vaccination table Hong Kong 2024-05-17\n",
+      "Not in parent vaccination table Hong Kong 2024-05-17\n",
+      "Not in parent vaccination table Hong Kong 2024-05-17\n",
+      "Not in parent vaccination table Hong Kong 2024-05-17\n",
+      "Not in parent vaccination table Hong Kong 2024-05-17\n",
+      "Not in parent vaccination table Hong Kong 2024-05-18\n",
+      "Not in parent vaccination table Hong Kong 2024-05-18\n",
+      "Not in parent vaccination table Hong Kong 2024-05-18\n",
+      "Not in parent vaccination table Hong Kong 2024-05-18\n",
+      "Not in parent vaccination table Hong Kong 2024-05-18\n",
+      "Not in parent vaccination table Hong Kong 2024-05-18\n",
+      "Not in parent vaccination table Hong Kong 2024-05-19\n",
+      "Not in parent vaccination table Hong Kong 2024-05-19\n",
+      "Not in parent vaccination table Hong Kong 2024-05-19\n",
+      "Not in parent vaccination table Hong Kong 2024-05-19\n",
+      "Not in parent vaccination table Hong Kong 2024-05-19\n",
+      "Not in parent vaccination table Hong Kong 2024-05-20\n",
+      "Not in parent vaccination table Hong Kong 2024-05-20\n",
+      "Not in parent vaccination table Hong Kong 2024-05-20\n",
+      "Not in parent vaccination table Hong Kong 2024-05-20\n",
+      "Not in parent vaccination table Hong Kong 2024-05-20\n",
+      "Not in parent vaccination table Hong Kong 2024-05-20\n",
+      "Not in parent vaccination table Hong Kong 2024-05-21\n",
+      "Not in parent vaccination table Hong Kong 2024-05-21\n",
+      "Not in parent vaccination table Hong Kong 2024-05-21\n",
+      "Not in parent vaccination table Hong Kong 2024-05-21\n",
+      "Not in parent vaccination table Hong Kong 2024-05-21\n",
+      "Not in parent vaccination table Hong Kong 2024-05-21\n",
+      "Not in parent vaccination table Hong Kong 2024-05-21\n",
+      "Not in parent vaccination table Hong Kong 2024-05-22\n",
+      "Not in parent vaccination table Hong Kong 2024-05-22\n",
+      "Not in parent vaccination table Hong Kong 2024-05-22\n",
+      "Not in parent vaccination table Hong Kong 2024-05-22\n",
+      "Not in parent vaccination table Hong Kong 2024-05-22\n",
+      "Not in parent vaccination table Hong Kong 2024-05-22\n",
+      "Not in parent vaccination table Hong Kong 2024-05-22\n",
+      "Not in parent vaccination table Hong Kong 2024-05-22\n",
+      "Not in parent vaccination table Hong Kong 2024-05-23\n",
+      "Not in parent vaccination table Hong Kong 2024-05-23\n",
+      "Not in parent vaccination table Hong Kong 2024-05-23\n",
+      "Not in parent vaccination table Hong Kong 2024-05-23\n",
+      "Not in parent vaccination table Hong Kong 2024-05-23\n",
+      "Not in parent vaccination table Hong Kong 2024-05-23\n",
       "Not in parent vaccination table Hungary 2022-12-30\n",
       "Not in parent vaccination table Hungary 2022-12-30\n",
       "Not in parent vaccination table Hungary 2022-12-30\n",
@@ -6939,9 +7059,9 @@
       "Not in parent vaccination table Norway 2023-09-01\n",
       "Not in parent vaccination table Norway 2023-09-01\n",
       "Not in parent vaccination table Norway 2023-09-01\n",
-      "Not in parent vaccination table Peru 2024-05-28\n",
-      "Not in parent vaccination table Peru 2024-05-28\n",
-      "Not in parent vaccination table Peru 2024-05-28\n",
+      "Not in parent vaccination table Peru 2024-06-11\n",
+      "Not in parent vaccination table Peru 2024-06-11\n",
+      "Not in parent vaccination table Peru 2024-06-11\n",
       "Not in parent vaccination table Slovakia 2021-01-01\n",
       "Not in parent vaccination table Slovakia 2021-01-01\n",
       "Not in parent vaccination table Slovakia 2021-01-01\n",
@@ -7796,10 +7916,8 @@
    "source": [
     "fk = [f\"{data[0]}{data[1]}\" for data in model_vac]\n",
     "\n",
-    "raw_data_age_grp = read_csv(\"../covid-19-data/vaccinations-by-age-group.csv\")\n",
-    "\n",
     "result = []\n",
-    "for data in raw_data_age_grp:\n",
+    "for data in raw_vaccine_age:\n",
     "    if f\"{iso_map[data['location']]}{data['date']}\" in fk:\n",
     "        result.append([iso_map[data['location']],data['date'],data['age_group'],data['people_vaccinated_per_hundred'],data[\"people_fully_vaccinated_per_hundred\"],data[\"people_with_booster_per_hundred\"]])\n",
     "    else:\n",
