--- a/notebook/dataPipeline.ipynb
+++ b/notebook/dataPipeline.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Bulding model for schema\n",
     "\n",
-    "![database schema](../Material/ER-1.png)"
+    "![database schema](../Asset/ER-1.png)"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4933,6 +4933,50 @@
       "Not in parent vaccination table Hong Kong 2024-05-23\n",
       "Not in parent vaccination table Hong Kong 2024-05-23\n",
       "Not in parent vaccination table Hong Kong 2024-05-23\n",
+      "Not in parent vaccination table Hong Kong 2024-05-24\n",
+      "Not in parent vaccination table Hong Kong 2024-05-24\n",
+      "Not in parent vaccination table Hong Kong 2024-05-24\n",
+      "Not in parent vaccination table Hong Kong 2024-05-24\n",
+      "Not in parent vaccination table Hong Kong 2024-05-24\n",
+      "Not in parent vaccination table Hong Kong 2024-05-24\n",
+      "Not in parent vaccination table Hong Kong 2024-05-24\n",
+      "Not in parent vaccination table Hong Kong 2024-05-25\n",
+      "Not in parent vaccination table Hong Kong 2024-05-25\n",
+      "Not in parent vaccination table Hong Kong 2024-05-25\n",
+      "Not in parent vaccination table Hong Kong 2024-05-25\n",
+      "Not in parent vaccination table Hong Kong 2024-05-25\n",
+      "Not in parent vaccination table Hong Kong 2024-05-25\n",
+      "Not in parent vaccination table Hong Kong 2024-05-25\n",
+      "Not in parent vaccination table Hong Kong 2024-05-26\n",
+      "Not in parent vaccination table Hong Kong 2024-05-26\n",
+      "Not in parent vaccination table Hong Kong 2024-05-26\n",
+      "Not in parent vaccination table Hong Kong 2024-05-26\n",
+      "Not in parent vaccination table Hong Kong 2024-05-27\n",
+      "Not in parent vaccination table Hong Kong 2024-05-27\n",
+      "Not in parent vaccination table Hong Kong 2024-05-27\n",
+      "Not in parent vaccination table Hong Kong 2024-05-27\n",
+      "Not in parent vaccination table Hong Kong 2024-05-27\n",
+      "Not in parent vaccination table Hong Kong 2024-05-27\n",
+      "Not in parent vaccination table Hong Kong 2024-05-27\n",
+      "Not in parent vaccination table Hong Kong 2024-05-27\n",
+      "Not in parent vaccination table Hong Kong 2024-05-28\n",
+      "Not in parent vaccination table Hong Kong 2024-05-28\n",
+      "Not in parent vaccination table Hong Kong 2024-05-28\n",
+      "Not in parent vaccination table Hong Kong 2024-05-28\n",
+      "Not in parent vaccination table Hong Kong 2024-05-28\n",
+      "Not in parent vaccination table Hong Kong 2024-05-29\n",
+      "Not in parent vaccination table Hong Kong 2024-05-29\n",
+      "Not in parent vaccination table Hong Kong 2024-05-29\n",
+      "Not in parent vaccination table Hong Kong 2024-05-29\n",
+      "Not in parent vaccination table Hong Kong 2024-05-29\n",
+      "Not in parent vaccination table Hong Kong 2024-05-29\n",
+      "Not in parent vaccination table Hong Kong 2024-05-30\n",
+      "Not in parent vaccination table Hong Kong 2024-05-30\n",
+      "Not in parent vaccination table Hong Kong 2024-05-30\n",
+      "Not in parent vaccination table Hong Kong 2024-05-30\n",
+      "Not in parent vaccination table Hong Kong 2024-05-30\n",
+      "Not in parent vaccination table Hong Kong 2024-05-30\n",
+      "Not in parent vaccination table Hong Kong 2024-05-30\n",
       "Not in parent vaccination table Hungary 2022-12-30\n",
       "Not in parent vaccination table Hungary 2022-12-30\n",
       "Not in parent vaccination table Hungary 2022-12-30\n",
@@ -7059,9 +7103,9 @@
       "Not in parent vaccination table Norway 2023-09-01\n",
       "Not in parent vaccination table Norway 2023-09-01\n",
       "Not in parent vaccination table Norway 2023-09-01\n",
-      "Not in parent vaccination table Peru 2024-06-11\n",
-      "Not in parent vaccination table Peru 2024-06-11\n",
-      "Not in parent vaccination table Peru 2024-06-11\n",
+      "Not in parent vaccination table Peru 2024-06-14\n",
+      "Not in parent vaccination table Peru 2024-06-14\n",
+      "Not in parent vaccination table Peru 2024-06-14\n",
       "Not in parent vaccination table Slovakia 2021-01-01\n",
       "Not in parent vaccination table Slovakia 2021-01-01\n",
       "Not in parent vaccination table Slovakia 2021-01-01\n",
